--- a/client/src/CSS/scss_partials/home/menu/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/menu/_navbar.scss
@@ -9,10 +9,7 @@
 	top: 0;
 
 	.navbar {
-		// This background color should only appear if there was a problem
-		// ...assigning a different background color to this element.
-		// ...the scss for the colors assigned are in app.scss
-		background-color: black;
+		background-color: v.$default-theme-base-border-background-color;
 		height: v.$navbar-height;
 		width: 100%;
 	}
