--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugPieChart.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugPieChart.scss
@@ -48,8 +48,7 @@
 		display: inline-block;
 		border-radius: v.$status-box-border-radius;
 		// This background color should only appear if there was a problem
-		// ...assigning a different background color to a status-box.
-		// ...the scss for the colors assigned are in app.scss
+		// ...assigning a different background using JS
 		background-color: black;
 		height: v.$status-box-height;
 		width: v.$status-box-width;
