--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewDisplayItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewDisplayItemInfo.scss
@@ -36,8 +36,7 @@
 		margin-left: v.$display-item-field-margin-left;
 		border-radius: v.$status-box-border-radius;
 		// This background color should only appear if there was a problem
-		// ...assigning a different background color to a status-box.
-		// ...the scss for the colors assigned are in app.scss
+		// ...assigning a different background color using JS
 		background-color: black;
 		color: white;
 		height: v.$status-box-height;
