--- a/client/src/CSS/scss_partials/utils/_mixins.scss
+++ b/client/src/CSS/scss_partials/utils/_mixins.scss
@@ -71,20 +71,23 @@
 	border: 0;
 	// Need to get rid of border for a submit button
 	border-radius: v.$base-buttton-border-radius;
-	// This background color should only appear if there was a problem
-	// ...assigning a different background color to this element.
-	// ...the scss for the colors assigned are in app.scss
-	background-color: black;
+	background-color: v.$default-theme-brighter-border-background-color;
 	padding: 10px;
 	width: 100%;
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	cursor: pointer;
+
+	&:hover,
+	&:active,
+	&:focus {
+		background-color: v.$default-theme-base-border-background-color;
+	}
 }
 
 @mixin item-view-form-submit-button() {
-	// Must be border-box because the zoom on the webpage can resize the border otherwise
+	// So Submit and cancel buttons are the same size
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -92,10 +95,7 @@
 	outline: none;
 	border: 1px solid black;
 	border-radius: v.$base-buttton-border-radius;
-	// This background color should only appear if there was a problem
-	// ...assigning a different background color to this element.
-	// ...the scss for the colors assigned are in app.scss
-	background-color: black;
+	background-color: v.$default-theme-brighter-border-background-color;
 	// Only top and bottom because of inconsistencies
 	// ...with button vs divs.
 	padding: 10px 0px 10px 0px;
@@ -106,12 +106,18 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	cursor: pointer;
+
+	&:hover,
+	&:active,
+	&:focus {
+		background-color: v.$default-theme-base-border-background-color;
+	}
 }
 
 @mixin item-view-form-cancel-button() {
 	@include stop-text-selection();
 
-	// Must be border-box because the zoom on the webpage can resize the border otherwise
+	// So Submit and cancel buttons are the same size
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
